[tool.poetry]
name = "rss-parser"
version = "0.1.0"
description = "Simple RSS parser microservice written in Python"
authors = ["Ozan Yetkin <ozan.yetkin.579@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.11"
pyrebase5 = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
